# optitrack-camera-calibration

./: CMakeLists.txt  LICENSE  README.md
include/: InterThreadMessenger.hpp
src/: main.cpp
